--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "doctrine/dbal": "^2.10",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
+        "barryvdh/laravel-dompdf": "0.8.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
