--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-dompdf": "0.8.2",
         "doctrine/dbal": "^2.10",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "~2.1.0",
-        "barryvdh/laravel-dompdf": "0.8.2"
+        "nesbot/carbon": "^2.27"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
